Week 6 project completed
